password screen update and change password

--- a/estilo/alterarsenha.css
+++ b/estilo/alterarsenha.css
@@ -51,6 +51,10 @@ div.section{
     padding-right: 1em;
 }
 
+.form_campo:focus{
+    outline: none;
+}
+
 .alterar {
     background-color: #FF2C23;
     width: 12em;
