--- a/estilo/iniciar.css
+++ b/estilo/iniciar.css
@@ -1,42 +1,133 @@
-/*.container {
-    display: flex;
-}*/
-
-.logo_alternativa img {
-    width: 700px; 
-    height: auto;
-    display: flex; 
-    margin: 0 auto; 
+body {
+    padding: 1em;
+    font-family: "Bungee", sans-serif;
 }
 
-.container {
+header {
     display: flex;
-    flex-direction: column;
-    /*background-color: gray;*/
-    width: 16em;
-    height: 14em;
-    background-color: #fafafa;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    text-align: center;
-    transition: box-shadow 0.3s ease-in-out;
+    gap: 1em;
+    align-items: center;
+    justify-content: flex-end;
+    height: 2em;
 }
 
-/*.perfil_usuario {
+div.perfil-usuario {
     display: flex;
     align-items: center;
     gap: .2em;
-    margin-left: 2em;
-    margin-top: 2em;
-}*/
+}
 
-.perfil_usuario {
-    position: absolute;
-    top: 20px;
-    right: 20px;
+.logo-user {
+    height: 2em;
+    width: auto;
+}
+
+p.exit {
+    color: red;
+}
+
+div.title-image {
+    display: flex;
+    padding-left: 10.5em;
+    margin-bottom: 2em;
+    justify-content: center;
+}
+
+.campo-minado-image {
+    width: 35%;
+    height: auto;
+}
+div.content {
+    display: flex;
+    flex-grow: 1;
+    padding-left: 1em;
+    padding-right: 1em;
+    gap: 5em;   
+    align-items: center;
+
+}
+div.settings {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+}
+div.options-ranking-history {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+}
+
+div.item-iniciar {
+    display: flex;
+    gap: 1em;
+    align-items: center;
+}
+
+div.selection-mode {
+    display: flex;
+    gap: 1em;
+    padding: .3em;
+}
+
+button.game-mode {
+    border-radius: 1em;
+    border-style: none;
+    padding: .3em;
+}
+
+button.game-mode-yellow {
+    border-radius: 1em;
+    border-style: none;
+    background-color: #DAA520;
+}
+
+span {
+    font-family: "Bungee", sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+div.iniciar-options {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    align-items: center; 
+}
+
+div.iniciar-options img {
+    width: 3em;
+    height: 3em;
+    align-self: center;
+}
+
+div.game-settings-container {
     display: flex;
     align-items: center;
+    justify-content: center;
+    background-color: #D9D9D9;
+    width: 50em;
+    height: 30em;
+    border-radius: 1em;
+}
+
+div.bora-comecar {
+    display:flex;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+button.start-game-button {
+    background-color: #FF2C23;
+    padding: 1em;
+    border-radius: 20px;
+    border: 0;
+    box-shadow: 0px 4px 4px 0px #00000040;
 }
 
 .perfil_ranking {
@@ -46,14 +137,6 @@
     margin-left: 2em;
     margin-top: 1.5em;
 }
-
-/*.perfil_ranking {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}*/
-
-
 .perfil_historico {
     display: flex;
     align-items: center;
@@ -61,67 +144,33 @@
     margin-left: 2em;
     margin-top: .7em;
 }
-
-
-.perfil_texto {
-    font-family: "Bungee", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 1em;
-    margin-right: 8em;
-}
-
-input[type='range'] { 
-    accent-color: #E8B931; 
-    /*-webkit-appearance: none;*/ /* Remove o estilo padrão no Chrome/Safari */
+ /*TODO: remover borda do componente quando preenchido*/
+input[type='range'] {
+    accent-color: #E8B931;
+    /*-webkit-appearance: none;*/
+    /* Remove o estilo padrão no Chrome/Safari */
     /*background: transparent;  Torna o fundo transparente para não mostrar qualquer estilo padrão */
-    border: none; /* Remove a borda padrão */
+    border: none;
+    /* Remove a borda padrão */
     outline: none;
 }
 
-input[type='range']:focus {  
+input[type='range']:focus {
     outline: none;
     border: none;
-}
-
-
-.container_iniciar {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 0; 
-}
-
-.iniciar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #D9D9D9;
-    width: 43em;
-    height: 27.25em;
 }
 
 .area_iniciar {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 2em;
-    width: 28em;
-    height: 18.5em;
-    padding-top: 3em;
+    padding-top: 4em;
+    padding-bottom: 4em;
+    padding-left: 3em;
+    padding-right: 3em;
     background-color: #C6C6C6;
     box-shadow: 0px 4px 4px 0px #00000040;
     border-radius: 20px;
-}
-
-.item_iniciar {
-    display: inline-block;
-    /*align-items: center;
-    gap: 2em;
-    width: 1em;
-    margin-top: 3em;
-    margin-left: 3em;*/
 }
 
 .simbolo_menos {
