--- a/estilo/alterarsenha.css
+++ b/estilo/alterarsenha.css
@@ -13,7 +13,7 @@ body {
 
 div.section{
     display: flex;
-    gap: 1.5em;
+    gap: 1em;
     background-color: #D9D9D9;
     padding: 2em;
     border-radius: .5em;
@@ -35,8 +35,9 @@ div.section{
 
 .section .subtitulo{
     align-self: flex-start; /* Alinha à esquerda dentro de um contêiner flex */
+    font-family: "Cabin", sans-serif;
     font-weight: bold;
-    font-family: cursive;
+    font-size: 15px;
 }
 
 .form_campo {
