--- a/estilo/meusdados.css
+++ b/estilo/meusdados.css
@@ -45,8 +45,8 @@ p {
     padding-left: 1.5em;
     box-shadow: 0px 4px 4px 0px #00000040;
     display: flex;
-    padding-right: 1em;
-    justify-content: left;
+    flex-direction: column;
+    justify-content: center;
     font-size: 18px;
     font-family: "Cabin", sans-serif;
     
