--- a/estilo/partida.css
+++ b/estilo/partida.css
@@ -178,3 +178,23 @@ div.spy {
   gap: .5em;
   cursor: pointer;
 }
+
+.board {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 50px); /* Ajusta para criar quadrados */
+  gap: 5px;
+  justify-content: center;
+}
+.cell {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+  font-size: 18px;
+  font-family: Arial, sans-serif;
+}
+.cell.mine {
+  background-color: red;
+}
