--- a/estilo/partida.css
+++ b/estilo/partida.css
@@ -201,10 +201,14 @@ div.spy {
 .revealed {
   width: 50px;
   height: 50px;
+  border: 1px solid #000;
+  align-items: center;
   background-color: lightgray; /* Quando revelada, a célula fica cinza claro */
   color: black;
   cursor: default;
 }
 .mine {
+  border: 1px solid #000;
+  align-items: center;
   background-color: red;
 }
